@@ -1,3 +1,9 @@
+2023-11-01T20:06:26Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6724539193 # 4090
+* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2023-11-01
+* notice: query file size: 26207
+* notice: accum prev / next / diff: re vi: 0 2867 / 0 2869 / +0 +2
+
 2023-11-01T00:31:23Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6714038747 # 4085
 * notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2023-11-01
